fix card image not showing on large viewports

--- a/css/style.css
+++ b/css/style.css
@@ -29,18 +29,24 @@ body {
   }
 }
 
-.card .card__image {
-  flex: 0 0 15rem;
-  background: url(../images/image-header-mobile.jpg), #aa5cdb;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: multiply;
-  border-radius: 0.5rem 0.5rem 0 0;
+@media screen and (max-width: 375px) {
+  .card .card__image {
+    flex: 0 0 15rem;
+    background: url(../images/image-header-mobile.jpg), #aa5cdb;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
 }
 
 @media screen and (min-width: 376px) {
   .card .card__image {
     flex: 1 1 48%;
+    background: url(../images/image-header-desktop.jpg), #aa5cdb;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
     border-radius: 0 0.5rem 0.5rem 0;
   }
 }
